changes after friday meeting

--- a/mainpage.html
+++ b/mainpage.html
@@ -36,17 +36,16 @@
             </li>
             <li><a href="#exhibitors" id="nav-exhibitors">EXHIBITORS</a></li>
             <li><a href="#program" id="nav-program">CALENDER</a></li>
+            <li><a href="#vacancy" id="nav-vacancy">VACANCIES</a></li>
             <li>
               <a
                 href="https://nmhw.taipeiartbookfair.com/"
                 target="_blank"
                 id="nav-shop"
-                >SHOP</a
+                >NMHW</a
               >
             </li>
             <li><a href="#about" id="nav-about">ABOUT</a></li>
-            <li><a href="#ASSESS" id="nav-assess">ASSESS</a></li>
-            <li><a href="#ticket" id="nav-ticket">TICKETS</a></li>
             <li>
               <a href="#contact" class="footer-link exhibitor-login"
                 >EXHIBITOR LOGIN</a
@@ -73,29 +72,9 @@
 
     <!-- start of main-content -->
     <div class="main-content">
-      <!-- start of exhibitors-roller-section -->
-      <section class="exhibitors-roller-section" id="Exhibitors-1">
-        <h3>EXHIBITORS</h3>
-        <div class="exhibitors-grid">
-          <div class="loading-message">
-            <p>Loading...</p>
-          </div>
-        </div>
-        <hr
-          style="border: none; border-bottom: 1px solid black; margin: 10px 0"
-        />
-        <div style="text-align: center">CHECK OUT THE FULL LIST</div>
-        <hr
-          style="border: none; border-bottom: 1px solid black; margin: 10px 0"
-        />
-      </section>
-      <!-- end of exhibitors-roller-section -->
-
       <!-- start of poster-section -->
       <section class="poster-section" id="Poster">
-        <div class="poster-credit-left">無限柔軟</div>
         <img class="poster" src="25TPABF_poster_RGB.png" alt="Poster" />
-        <div class="poster-credit-right">SOFT POW</div>
         <div>
           made by
           <a href="https://www.instagram.com/sidandgeri/" target="_blank"
@@ -105,32 +84,27 @@
       </section>
       <!-- end of poster-section -->
 
+      <section class="calender-section">
+        <h3>CALENDER</h3>
+        <p style="font-size: 0.8rem; color: green; text-align: right">
+          Suscribe to TPABF's calender
+        </p>
+
+        <!-- 日曆內容區域 -->
+        <div class="calender-content">
+          <div id="eventsTimeline" class="events-timeline">
+            <!-- 日曆事件將由 calender.js 動態生成 -->
+          </div>
+          <div style="text-align: center">SEE MORE</div>
+        </div>
+      </section>
+
       <!-- start of shop-section -->
       <section class="multifunction-section" id="Multifunction">
         <div>
           <!-- 開始標籤 -->
-          <div style="width: 100%; margin-bottom: 15px">
-            <a
-              style="
-                background: black;
-                color: ghostwhite;
-                font-weight: 400;
-                padding: 3px;
-                font-size: 1.8rem;
-                display: block;
-                text-decoration: none;
-                text-align: center;
-                transition: all 0.2s ease;
-                letter-spacing: 0.1rem;
-                cursor: pointer;
-              "
-              >TICKETS</a
-            >
-          </div>
-          <hr
-            style="border: none; border-bottom: 1px solid black; margin: 15px 0"
-          />
-          <h3>SHOP</h3>
+
+          <h3>ZINE WALL</h3>
           <img
             src="https://shoplineimg.com/67e660195ef93c003d3ac6d9/68526029ff7c14000f7167fa/800x.png?"
             alt="Product 1"
@@ -206,73 +180,6 @@
     </div>
 
     <hr
-      style="
-        border: none;
-        border-bottom: 1px solid black;
-        margin: 20px 16px 20px 16px;
-      "
-    />
-
-    <div class="second-content">
-      <section class="workshop-section">
-        <h3>WORKSHOPS</h3>
-
-        <!-- 工作坊項目 1 -->
-        <div class="workshop-item">
-          <h4>BOOK BINDING MASTERCLASS</h4>
-          <p class="workshop-description">
-            Learn traditional Japanese bookbinding techniques with master
-            craftsman
-          </p>
-          <div class="workshop-time">March 15, 2025 | 14:00-17:00</div>
-          <div class="workshop-location">Workshop Room A</div>
-        </div>
-
-        <hr
-          style="border: none; border-bottom: 1px solid black; margin: 15px 0"
-        />
-
-        <!-- 工作坊項目 2 -->
-        <div class="workshop-item">
-          <h4>DIGITAL PRINTING TECHNIQUES</h4>
-          <p class="workshop-description">
-            Explore modern digital printing methods for artists and designers
-          </p>
-          <div class="workshop-time">March 16, 2025 | 10:00-13:00</div>
-          <div class="workshop-location">Digital Lab</div>
-        </div>
-
-        <hr
-          style="border: none; border-bottom: 1px solid black; margin: 15px 0"
-        />
-
-        <!-- 工作坊項目 3 -->
-        <div class="workshop-item">
-          <h4>ZINE MAKING WORKSHOP</h4>
-          <p class="workshop-description">
-            Create your own zine from concept to final publication
-          </p>
-          <div class="workshop-time">March 17, 2025 | 15:00-18:00</div>
-          <div class="workshop-location">Creative Studio</div>
-        </div>
-      </section>
-      <section class="calender-section">
-        <h3>CALENDER</h3>
-        <p style="font-size: 0.8rem; color: green; text-align: right">
-          Suscribe to TPABF's calender
-        </p>
-
-        <!-- 日曆內容區域 -->
-        <div class="calender-content">
-          <div id="eventsTimeline" class="events-timeline">
-            <!-- 日曆事件將由 calender.js 動態生成 -->
-          </div>
-          <div style="text-align: center">SEE MORE</div>
-        </div>
-      </section>
-    </div>
-
-    <hr
       style="border: none; border-bottom: 1px solid black; margin: 15px 16px"
     />
     <section class="newsletter-section">
@@ -302,6 +209,13 @@
 
     <!-- end of main-content -->
 
+    <!-- 浮動的Ticket按鈕 -->
+    <div class="floating-ticket" id="floatingTicket">
+      <button class="hide-ticket-btn" id="hideTicketBtn">X</button>
+
+      <span>GET A TICKET</span>
+    </div>
+
     <!-- 頁腳 -->
     <footer class="footer">
       <div class="footer-content">
@@ -309,25 +223,10 @@
           <p class="footer-text">© 2025 TPABF</p>
         </div>
         <div class="footer-right">
-          <a href="#vacancy" class="footer-link">VACANCIES</a>
           <a href="#contact" class="footer-link">CONTACT</a>
         </div>
       </div>
     </footer>
-
-    <!-- 右下角浮動的 Newsletter Signup -->
-    <div class="newsletter-popup" id="newsletterPopup">
-      <div class="newsletter-header">
-        <h4>SIGN UP FOR THE NEWSLETTER</h4>
-        <button class="close-btn" id="closeNewsletter">×</button>
-      </div>
-      <div class="newsletter-content">
-        <form class="newsletter-form">
-          <input type="email" placeholder="Email@Email.com" required />
-          <button type="submit">JOIN</button>
-        </form>
-      </div>
-    </div>
 
     <script>
       // Newsletter 彈出視窗功能
@@ -377,6 +276,61 @@
 
       // 初始化按鈕文字
       updateLanguageButton();
+
+      // 浮動Ticket按鈕動畫
+      const floatingTicket = document.getElementById("floatingTicket");
+      let ticketX = Math.random() * (window.innerWidth - 240); // 15rem = 240px
+      let ticketY = Math.random() * (window.innerHeight - 48); // 3rem = 48px
+      let ticketSpeedX = (Math.random() - 0.5) * 1.5 + 0.8; // 0.8-2.3 或 -0.8 到 -2.3
+      let ticketSpeedY = (Math.random() - 0.5) * 1.5 + 0.8; // 0.8-2.3 或 -0.8 到 -2.3
+
+      function animateTicket() {
+        // 更新位置
+        ticketX += ticketSpeedX;
+        ticketY += ticketSpeedY;
+
+        // 邊界碰撞檢測 - 更精確的邊界計算
+        if (ticketX <= 0 || ticketX >= window.innerWidth - 120) {
+          ticketSpeedX = -ticketSpeedX;
+          // 添加一點隨機性，讓碰撞後的運動更自然
+          ticketSpeedY += (Math.random() - 0.5) * 0.5;
+        }
+        if (ticketY <= 0 || ticketY >= window.innerHeight - 60) {
+          ticketSpeedY = -ticketSpeedY;
+          // 添加一點隨機性，讓碰撞後的運動更自然
+          ticketSpeedX += (Math.random() - 0.5) * 0.5;
+        }
+
+        // 限制速度範圍，避免過快或過慢
+        ticketSpeedX = Math.max(-3, Math.min(3, ticketSpeedX));
+        ticketSpeedY = Math.max(-3, Math.min(3, ticketSpeedY));
+
+        // 確保按鈕不會超出螢幕邊界
+        ticketX = Math.max(0, Math.min(ticketX, window.innerWidth - 120));
+        ticketY = Math.max(0, Math.min(ticketY, window.innerHeight - 60));
+
+        // 應用位置
+        floatingTicket.style.left = ticketX + "px";
+        floatingTicket.style.top = ticketY + "px";
+      }
+
+      // 每50毫秒更新一次位置，創造流暢的動畫
+      setInterval(animateTicket, 50);
+
+      // Hide按鈕功能
+      const hideTicketBtn = document.getElementById("hideTicketBtn");
+      hideTicketBtn.addEventListener("click", (e) => {
+        e.stopPropagation(); // 防止觸發ticket按鈕的點擊事件
+        floatingTicket.style.display = "none";
+      });
+
+      // Ticket按鈕點擊事件
+      floatingTicket.addEventListener("click", () => {
+        // 可以連結到購票頁面或顯示購票信息
+        alert("🎫 購票功能即將推出！敬請期待！");
+        // 或者可以連結到購票頁面：
+        // window.open("https://ticket-page-url.com", "_blank");
+      });
 
       // 點擊關閉按鈕隱藏彈出視窗
       closeNewsletter.addEventListener("click", () => {
