調整主頁字體大小及導航菜單顏色

--- a/mainpage.html
+++ b/mainpage.html
@@ -30,7 +30,7 @@
     <nav class="navbar">
       <div class="container">
         <div class="nav-content">
-          <a id="site-name" style="font-family: 'Xiaoyuan-Trackpad', sans-serif;color:white;text-shadow: 1px 1px black;"><b>TAIPEI ART BOOK FAIR</b></a>
+          <a id="site-name" style="font-family: 'Xiaoyuan-Trackpad', sans-serif;color:white;text-shadow: 1px 1px black; font-size:3rem; line-height:1rem;"><b>TAIPEI ART BOOK FAIR</b></a>
           <ul class="nav-menu">
             <li class="language-switcher">
               <button id="language-toggle" class="language-btn">English</button>
