ticket to rider

--- a/mainpage.html
+++ b/mainpage.html
@@ -16,10 +16,10 @@
   </head>
   <body>
     <div class="social-links">
-        <div class="event-info-row">
+      <div style="display: flex; justify-content: flex-end; margin-right: 16px;">
           <p style="color: ghostwhite">INSTAGRAM</p>
           <p style="color: ghostwhite">FACEBOOK</p>
-        </div>
+      </div>
     </div>
 
     <!-- 導航欄 -->
@@ -65,9 +65,13 @@
         </div>
       </div>
       
-      <!-- Ticket 購票區塊 -->
-      <div class="ticket-info">
-        <p>Ticket｜購票</p>
+       <!-- Ticket 購票區塊 -->
+       <div class="ticket-info">
+        <div class="ticket-left-notch"></div>
+        <div class="ticket-content">
+          <p>Tickets | 購票</p>
+        </div>
+        <div class="ticket-right-notch"></div>
       </div>
     </div>
 
