calender layout change

--- a/mainpage.html
+++ b/mainpage.html
@@ -138,7 +138,7 @@
       <!-- end of poster-section -->
 
       <section class="calender-section" id="calender">
-        <h3>CALENDER</h3>
+        <h3>PROGRAMS</h3>
 
         <!-- 頂部控制區域：箭頭按鈕和訂閱文字 -->
         <div class="calender-header">
