footer color change

--- a/mainpage.html
+++ b/mainpage.html
@@ -213,7 +213,7 @@
               class="footer-text"
               style="
                 font-family: 'Xiaoyuan-01', sans-serif;
-                color: black;
+                color: lightgray;
                 font-size: 1.5rem;
                 vertical-align: middle;
                 transform: translateY(4px);
@@ -224,22 +224,22 @@
               type="email"
               placeholder="Enter your email"
               style="
-                border: 1px solid black;
-                background: olive;
-                color: aliceblue;
+                background: ghostwhite;
+                color: lightslategrey;
                 font-size: 1rem;
                 width: 400px;
                 outline: none;
                 font-family: inherit;
                 text-indent: 10px;
                 border-radius: 15px;
+                box-shadow: inset black 1px 1px 5px;
               "
             />
             <button
               type="submit"
               style="
-                background: ghostwhite;
-                color: black;
+                background: transparent;
+                color: lightgray;
                 font-size: 0.9rem;
                 border: none;
                 cursor: pointer;
