--- a/mainpage.html
+++ b/mainpage.html
@@ -15,15 +15,16 @@
     <link rel="stylesheet" href="css/exhibitors.css" />
   </head>
   <body>
-    <div class="social-links">
-      <div style="display: flex; justify-content: flex-end; margin-right: 16px">
-        <p style="color: ghostwhite">INSTAGRAM</p>
-        <p style="color: ghostwhite">FACEBOOK</p>
-      </div>
-    </div>
-
     <!-- 導航欄 -->
     <nav class="navbar">
+      <div class="social-links">
+        <div
+          style="display: flex; justify-content: flex-end; margin-right: 16px"
+        >
+          <p style="color: ghostwhite">INSTAGRAM</p>
+          <p style="color: ghostwhite">FACEBOOK</p>
+        </div>
+      </div>
       <div class="container">
         <div class="nav-content">
           <a
@@ -88,10 +89,10 @@
     <!-- start of monopoly-style layout -->
     <div class="monopoly-board">
       <!-- 四個角落 -->
-      <div class="corner corner-top-left">TPABF</div>
-      <div class="corner corner-top-right">2025</div>
-      <div class="corner corner-bottom-left">ART</div>
-      <div class="corner corner-bottom-right">BOOK</div>
+      <div class="corner corner-top-left"></div>
+      <div class="corner corner-top-right"></div>
+      <div class="corner corner-bottom-left"></div>
+      <div class="corner corner-bottom-right"></div>
 
       <!-- 上方書籍邊框 -->
       <div class="book-border book-border-top">
