ticket page update

--- a/mainpage.html
+++ b/mainpage.html
@@ -116,16 +116,6 @@
         <div class="book-item">ZINE 14</div>
       </div>
 
-      <!-- 右方書籍邊框 -->
-      <div class="book-border book-border-right">
-        <div class="book-item">ZINE 15</div>
-        <div class="book-item">ZINE 16</div>
-        <div class="book-item">ZINE 17</div>
-        <div class="book-item">ZINE 18</div>
-        <div class="book-item">ZINE 19</div>
-        <div class="book-item">ZINE 20</div>
-      </div>
-
       <!-- 下方書籍邊框 -->
       <div class="book-border book-border-bottom">
         <div class="book-item">ZINE 21</div>
@@ -205,7 +195,12 @@
               </button>
             </div>
 
-            <p class="calender-subscribe"><a href="https://calendar.google.com/calendar/u/2?cid=OTA1MjdmNjdmYTQ2MmM4M2UxODRiMGM2MmRlZjEwZWJjOGIwMGNjOGM2N2E1YjgzYWYyYWZiOTBhMWJkYjI5M0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t">Suscribe to TPABF's calender</p>
+            <p class="calender-subscribe">
+              <a
+                href="https://calendar.google.com/calendar/u/2?cid=OTA1MjdmNjdmYTQ2MmM4M2UxODRiMGM2MmRlZjEwZWJjOGIwMGNjOGM2N2E1YjgzYWYyYWZiOTBhMWJkYjI5M0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t"
+                >Suscribe to TPABF's calender</a
+              >
+            </p>
 
             <!-- 左左右右 -->
             <div class="calender-nav-group">
