the ticket links

--- a/ticket.html
+++ b/ticket.html
@@ -51,13 +51,13 @@
             data-en="General Ticket"
             >一般票</a
           >
-          <a
+          <!-- <a
             href="#merchandise-ticket"
             class="ticket-nav-link"
             data-zh="周邊票組"
             data-en="Merchandise Bundle"
             >周邊票組</a
-          >
+          > -->
           <a
             href="#student-ticket"
             class="ticket-nav-link"
@@ -147,7 +147,7 @@
               </div>
               <a
                 id="early-bird-btn"
-                href="#"
+                href="https://tour.ibon.com.tw/event/e2508000028lhmm"
                 class="ticket-btn"
                 data-zh="立即購票"
                 data-en="Buy Now"
@@ -188,7 +188,7 @@
               </div>
               <a
                 id="presale-btn"
-                href="#"
+                href="https://tour.ibon.com.tw/event/e2508000028lhmm"
                 class="ticket-btn"
                 data-zh="立即購票"
                 data-en="Buy Now"
@@ -229,7 +229,7 @@
               </div>
               <a
                 id="fast-pass-btn"
-                href="#"
+                href="https://tour.ibon.com.tw/event/e2508000028lhmm"
                 class="ticket-btn"
                 data-zh="立即購票"
                 data-en="Buy Now"
@@ -241,7 +241,7 @@
           <hr class="ticket-divider" />
 
           <!-- 周邊票組 -->
-          <div id="merchandise-ticket" class="ticket-section">
+          <!-- <div id="merchandise-ticket" class="ticket-section">
             <h3
               class="ticket-section-title"
               data-zh="周邊票組"
@@ -255,10 +255,10 @@
               data-en="Special ticket bundles that include limited merchandise, giving you both entry tickets and exclusive souvenirs."
             >
               包含限定周邊商品的特殊票券組合，讓您同時獲得入場券與精美紀念品。
-            </p>
+            </p> -->
 
-            <!-- T恤預購款+票 -->
-            <div class="ticket-sub-section">
+
+            <!-- <div class="ticket-sub-section">
               <div class="ticket-sub-layout">
                 <div class="ticket-sub-info">
                   <h4
@@ -307,7 +307,7 @@
                 data-en="Buy Now"
                 >立即購票</a
               >
-            </div>
+            </div> -->
 
             <!-- 草率簿+票 -->
             <div class="ticket-sub-section">
