--- a/ticket.html
+++ b/ticket.html
@@ -111,7 +111,7 @@
               data-zh="標準入場票券，可參加台北藝術書展所有展覽活動。適合所有參觀者，享受完整的藝術書展體驗。提供多種購票時段和價格選擇。"
               data-en="Standard admission tickets for all Taipei Art Book Fair exhibitions and activities. Suitable for all visitors to enjoy the complete art book fair experience. Multiple booking periods and price options available."
             >
-              標準入場票券，可參加台北藝術書展所有展覽活動。適合所有參觀者，享受完整的藝術書展體驗。提供多種購票時段和價格選擇。
+             你看這樣改就好了
             </p>
 
             <!-- 早鳥票 -->
